--- a/app/partials/desktop/channel_modal.html
+++ b/app/partials/desktop/channel_modal.html
@@ -84,6 +84,15 @@
 
       </div>
 
+      <div class="md_modal_iconed_section_wrap md_modal_iconed_section_link" ng-if="chatFull.chat.pFlags.creator || chatFull.chat.pFlags.left">
+        <i class="md_modal_section_icon md_modal_section_icon_person"></i>
+
+        <div class="md_modal_section_link_wrap">
+          <a class="md_modal_section_link" ng-click="addChannelAdmin()" my-i18n="channel_modal_add_admin"></a>
+        </div>
+
+      </div>
+
       <div class="md_modal_iconed_section_wrap md_modal_iconed_section_toggle">
         <i class="md_modal_section_icon md_modal_section_icon_notification"></i>
 
@@ -125,6 +134,7 @@
 
             <a ng-if="participant.canLeave" ng-click="leaveChannel()" class="md_modal_list_peer_action pull-right" my-i18n="group_modal_menu_leave"></a>
             <a ng-if="participant.canKick" ng-click="kickFromChannel(participant.user_id)" class="md_modal_list_peer_action pull-right" my-i18n="group_modal_members_kick"></a>
+            <a ng-if="participant.canRemoveAdmin" ng-click="removeChannelAdmin(participant.user_id)" class="md_modal_list_peer_action pull-right" my-i18n="channel_modal_members_remove_admin"></a>
 
             <a class="md_modal_list_peer_photo pull-left" my-peer-photolink="::participant.user_id" img-class="md_modal_list_peer_photo"></a>
 
