--- a/app/partials/mobile/channel_modal.html
+++ b/app/partials/mobile/channel_modal.html
@@ -79,6 +79,10 @@
       <a class="mobile_modal_action" ng-click="inviteToChannel()" my-i18n="channel_modal_add_member"></a>
     </div>
 
+    <div class="mobile_modal_action_wrap" ng-if="chatFull.chat.pFlags.creator">
+      <a class="mobile_modal_action" ng-click="addChannelAdmin()" my-i18n="channel_modal_add_admin"></a>
+    </div>
+
     <div class="mobile_modal_action_wrap" ng-if="chatFull.chat.pFlags.left">
       <a class="mobile_modal_action" ng-click="joinChannel()" my-i18n="channel_modal_join"></a>
     </div>
@@ -111,6 +115,7 @@
           <div class="chat_modal_participant_wrap clearfix" ng-repeat="participant in chatFull.participants.participants">
             <a ng-if="participant.canKick" ng-click="kickFromChannel(participant.user_id)" class="chat_modal_participant_kick pull-right" my-i18n="group_modal_members_kick"></a>
             <a ng-if="participant.canLeave" ng-click="leaveChannel()" class="chat_modal_participant_kick pull-right" my-i18n="group_modal_menu_leave"></a>
+            <a ng-if="participant.canRemoveAdmin" ng-click="removeChannelAdmin(participant.user_id)" class="md_modal_list_peer_action pull-right" my-i18n="channel_modal_members_remove_admin"></a>
 
             <a class="chat_modal_participant_photo pull-left" my-peer-photolink="participant.user_id" img-class="chat_modal_participant_photo" status="true"></a>
 
